# TegraRcmGUI

.github/workflows/: build.yml
TegraRcmGUI/: AppController.cpp  AppController.h  CMakeLists.txt  MainWindow.cpp  MainWindow.h  PayloadController.cpp  PayloadController.h  SettingsManager.h  TegraRcmSmash.cpp  main.cpp  main.qml
TegraRcmGUI/legacy/: DialogTab01.cpp  DialogTab01.h  DialogTab02.cpp  DialogTab03.cpp  DialogTab03.h  MainWindow.cpp  SettingsManager.cpp  TegraRcm.cpp  TegraRcm.h  TegraRcmGUI.cpp  TegraRcmGUI.h  TegraRcmGUI.sln  TegraRcmGUI.vcxproj  TegraRcmGUI.vcxproj.filters  TegraRcmGUIDlg.h  mainwindow.ui
TegraRcmGUI/legacy/res/: BitmapPicture.cpp
